# memory-cli

./: .gitignore  BACKLOG.md  CHECKLIST.md  CLAUDE.md  Makefile  README.md  REQUIREMENTS.md  TASK_PROMPT.txt  install.sh  pyproject.toml  white-paper.md
.planning/v1/: SESSION-STATE.md  boundary-dependency-map.md  clean-requirements.md  clean-unbiased.md  decomposition.md  raw-snapshot.md  raw-to-clean-trace.md  spec-claims.md  spec-context.md  stage-clean-checklist.md  stage-decompose-checklist.md  stage-research-checklist.md  stage-spec-tree-checklist.md  stage-specs-checklist.md  upstream-feedback.md
.planning/v2/: SESSION-STATE.md  stage-scaffold-checklist.md
src/memory_cli/: __init__.py  __main__.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_auto_routing_edge_tag_attr.py  test_entrypoint_dispatch.py  test_exit_codes.py  test_gate_noun_handler.py  test_global_flags.py  test_help_system.py  test_init_command.py  test_init_global_flag.py  test_init_project_flag.py  test_layered_search_local_and_global.py  test_neuron_add_parent_flag.py  test_output_envelope_json_and_text.py  test_resolve_connection_by_scope_exception_handling.py  test_scoped_handle_format_and_parse.py
tests/config/: __init__.py  test_config_loader_validator.py  test_config_path_resolution.py  test_config_schema_defaults.py  test_init_global_and_project.py
tests/db/: __init__.py  test_access_tracking_migration_v004.py  test_connection_setup.py  test_consolidated_migration_v005.py  test_extension_loader.py  test_manifesto_migration_and_meta.py  test_schema_migration_v001.py
(+247 files in other folders)
