# =============================================================================
# Purpose: Project build configuration for memory-cli
# Rationale: Single source of truth for dependencies, build system, and
#   console entry point. Uses modern pyproject.toml (PEP 621).
# Responsibility: Package metadata, dependency list, entry point, tool config
# Organization:
#   1. Build system
#   2. Project metadata and dependencies
#   3. Entry point (console_scripts)
#   4. Tool configuration (pytest, ruff)
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-cli"
version = "0.3.5"
description = "Graph-based memory CLI for AI agents"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "llama-cpp-python>=0.3.0",
    "sqlite-vec>=0.1.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
memory = "memory_cli.cli.entrypoint_and_argv_dispatch:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
